# mpq-tools-osx

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.github/: release-drafter.yml
.github/workflows/: npm-publish.yml
examples/: add-files.js  patch-z.mpq  test.mpq
lib/: index.js
mpqcli/: CMakeLists.txt
mpqcli/src/: main.cpp  mpq_handler.cpp  mpq_handler.hpp
scripts/: build.js
